Name change to avoid package creation error in Windows

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "A1Evo Electrified",
+  "name": "A1Evo_Electrified",
   "productName": "",
   "description": "Electron port of the great A1Evo from OCA",
   "keywords": [
