--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "main.js",
   "type": "module",
-  "version": "0.9.12 Beta 1",
+  "version": "0.9.12-Beta1",
   "author": "Juanjo",
   "scripts": {
     "start": "electron-forge start",
